# Rope

./: .gitignore  README.md  README_AMD_ROCM.md  Rope-ROCm-Debug.bat  Rope-ROCm.bat  Rope.py  install-cuda.bat  install-rocm.bat  pyproject.toml
rope/: DeviceManager.py  GUI.py  GUIElements.py  Models.py  VideoManager.py
