[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rope"
version = "1.0.0"
description = "Rope - Face swapping application with insightface inswapper_128 model"
readme = "README.md"
# Python 3.8-3.11 for CUDA/CPU, Python 3.12 REQUIRED for AMD ROCm
requires-python = ">=3.8,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Rope Contributors"}
]

dependencies = [
    "numpy==1.23.5",
    "opencv-python==4.7.0.72",
    "scikit-image==0.21.0",
    "tk==0.1.0",
    "pillow==9.5.0",
    "onnx==1.14.0",
    "protobuf==4.23.2",
    "tqdm",
    "ftfy",
    "regex",
]

[project.optional-dependencies]
# WARNING: These extras are MUTUALLY EXCLUSIVE! Only install ONE at a time.
# Do NOT use "uv sync" as it will try to install all extras simultaneously.
# Use the installation scripts instead: install-cuda.bat or install-rocm.bat

# NVIDIA CUDA support (default)
# Install with: uv pip install -e .[cuda] --extra-index-url https://download.pytorch.org/whl/cu118
cuda = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "onnxruntime-gpu==1.16.2",
]

# AMD ROCm support for Windows
# Install with: install-rocm.bat (uses special PyTorch index)
rocm = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "torchaudio==2.4.0",
    "onnxruntime-rocm",
]

# CPU-only support (fallback)
# Install with: uv pip install -e .[cpu]
cpu = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "onnxruntime==1.16.2",
]

# Development dependencies
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools]
packages = ["rope"]

[project.urls]
Homepage = "https://github.com/Hillobar/Rope"
Repository = "https://github.com/Hillobar/Rope"
